<resources>
    <string name="app_name">Shopping List App</string>
    <string name="add_item_text">Add Item</string>
    <string name="title_activity_shop_items">ShopItemsActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_shop_items_list">ShopItemsListActivity</string>


    <string name="text_shop_item_1">Apple</string>
    <string name="text_shop_item_2">Banana</string>
    <string name="text_shop_item_3">Carrot</string>
    <string name="text_shop_item_4">Donut</string>
    <string name="text_shop_item_5">Eggs</string>
    <string name="text_shop_item_6">Fanta</string>
    <string name="text_shop_item_7">Grapes</string>
    <string name="store_finder_button_text">Search for nearest store</string>
    <string name="edittext_store_finder_hint">Choose your location</string>

</resources>
