<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.vishniya.codingchallenge_implicitintent_shoppinglist.codingchallenge_shopping_list.ShopItemsListActivity">


    <EditText
        android:id="@+id/editText_find_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/edittext_store_finder_hint"
        android:inputType="textPostalAddress"
        android:visibility="visible" />


    <Button
        android:id="@+id/button_find_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="findLocationOnMap"
        android:text="@string/store_finder_button_text" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:id="@+id/idLinearLayoutProductImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_shop_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_1" />

            <Button
                android:id="@+id/button_shop_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_2" />


            <Button
                android:id="@+id/button_shop_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_3" />

            <Button
                android:id="@+id/button_shop_item_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_4" />

            <Button
                android:id="@+id/button_shop_item_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_5" />

            <Button
                android:id="@+id/button_shop_item_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_6" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="sendItemToMainActivityList"
                android:text="@string/text_shop_item_7" />
        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>